Fix DCHECK on net error page

DCHECK(committed_error_page_info_->auto_reload_triggered) was failing.
This is possible because when assigning a new value to
committed_error_page_info_, the auto load timer can still be active.

R=jianli

Bug: 881208
Change-Id: I361df3e17bef122f143331107a76d04487b32fea
Reviewed-on: https://chromium-review.googlesource.com/c/1240872
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Jian Li <jianli@chromium.org>
Commit-Queue: Dan H <harringtond@google.com>
Cr-Commit-Position: refs/heads/master@{#597183}
Former-commit-id: d9f2d67efff0ea5f5eaf916f4c302996ee68a1af